# flashforge-claude-skill

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: SLICING.md  printer-narrative.html  printer-narrative.md
flashforge/: SKILL.md  generate.py  printer_cli.py
flashforge/figurines/: __init__.py
flashforge/figurines/backends/: __init__.py  tripo_api.py
flashforge/printer/: __init__.py  flashforge.py
flashforge/references/: printing-guidelines.md
flashforge/scripts/: fix_model.py  heightmap_to_stl.py  lithophane.py  png_to_stl.py  png_to_svg.py  utils.py
prompt/: flashforge-skill-prompt-v2.md  flashforge-skill-prompt.md
prompt/v3/: SKILL.md  generate.py  generator.py  hardware.py  tripo.py  triposr.py
src/flashforge_convert_mcp/: __init__.py  converters.py  server.py  slicer.py
src/flashforge_convert_mcp/profiles/adventurer_5m_pro/: fdm_adventurer5m_fixed.json  filament_petg.json  filament_pla.json  filament_standalone.json  fix_layer_gcode.json  machine.json  machine_complete.json  machine_fix.json  machine_standalone.json  printer.json  process_draft.json  process_fine.json  process_standalone.json  process_standard.json
src/flashforge_generate_mcp/: __init__.py  server.py  tripo.py
src/flashforge_printer_mcp/: __init__.py  protocol.py  server.py
